# beanhub-import-tutorial

./: README.md  main.bean  pyproject.toml
.beanhub/: imports.yaml
import-data/connect/chase/: 2025.csv
